--- a/style.css
+++ b/style.css
@@ -8,8 +8,13 @@ font-family: 'Poppins', sans-serif; */
 
 }
 
+body {
+    background: #fffefe;
+}
+
 /* header */
-header {
+header,
+main {
     margin: 0 15%;
 }
 
@@ -38,10 +43,11 @@ nav {
     color: #3A3A3A;
     gap: 34px;
 }
+
 /* ---------
     banner
 -------- */
-.banner{
+.banner {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -50,40 +56,160 @@ nav {
     background-repeat: no-repeat;
     background-position: right;
 }
-.banner-text{
+
+.banner-text {
     width: 60%;
 }
-.banner-text>h2{
+
+.banner-text>h2 {
     font-weight: 700;
     font-size: 52px;
     line-height: 70px;
     color: #3A3A3A;
 }
-.banner-text>p{
+
+.banner-text>p {
     font-weight: 600;
-font-size: 16px;
-color: #3A3A3A;
-margin: 16px 0;
+    font-size: 16px;
+    color: #3A3A3A;
+    margin: 16px 0;
 }
-.p-btn{
+
+.p-btn {
     color: white;
     padding: 10px 24px;
-background: #E02C6D;
-border-radius: 41px;
-border: none;
+    background: #E02C6D;
+    border-radius: 41px;
+    border: none;
 }
+
 /* ----------
     e-com   
 ------------- */
-.e-com>ul{
+.e-com>ul {
     padding: 35px 60px;
     align-items: center;
     list-style: none;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     justify-content: space-around;
-    border-top: 1px solid #AAAAAA; 
-    border-bottom: 1px solid #AAAAAA; 
+    border-top: 1px solid #AAAAAA;
+    border-bottom: 1px solid #AAAAAA;
     margin: 100px 0;
 
+}
+
+/* -----------------------
+    Popular Collection
+--------------------------- */
+main>h2 {
+    font-weight: 600;
+    font-size: 28px;
+    font-size: 28px;
+    width: 300px;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.item {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    padding: 15px;
+    width: 300px;
+}
+
+.p-image>img {
+    width: 300px;
+    height: 256px;
+    border-radius: 5px;
+}
+
+.p-title {
+    font-weight: 500;
+    font-size: 28px;
+    color: #18191F;
+    padding: 15px 0 0 0;
+}
+
+.p-price {
+    font-family: 'Inter', sans-serif;
+    font-size: 24px;
+    color: rgba(0, 0, 0, 0.87);
+    margin-bottom: 8px;
+}
+
+.rating i,
+.p-tag {
+    color: red;
+    font-weight: 700;
+    font-size: 14px;
+    margin-bottom: 8px;
+}
+
+.p-tag {
+    color: #5E6366;
+}
+
+.p-des {
+    color: #787885;
+    font-family: 'Inter';
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 143%;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 30px;
+    /* justify-content: space-between; */
+    justify-items: center;
+}
+
+/* see more */
+.see-more {
+    margin: 30px 5% 100px;
+
+    /* justify-content: right; */
+    text-align: right;
+    color: rgba(224, 44, 109, 0.87);
+    font-weight: 700;
+    font-size: 16px;
+}
+
+/* ---------------
+    featured Product
+    ---------------- */
+.f-product {
+    gap: 95px;
+    display: flex;
+    align-items: center;
+}
+
+.f-product-image> {
+    width: 404px;
+    height: 270px;
+    border-radius: 7px;
+}
+
+.f-product-text>h2 {
+    font-weight: 700;
+    font-size: 38px;
+    color: #0A0826;
+    margin-bottom: 16px;
+}
+
+.f-product-text>p {
+    font-weight: 700;
+    font-size: 16px;
+    color: #6C6C6C;
+    line-height: 28px;
+}
+.s-btn {
+    color: white;
+    padding: 10px 24px;
+    background: #E02C6D;
+    border: none;
 }
